--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <h2>Pages:</h2>
 
 <ul>
-	<li>&nbsp; &nbsp;<a href="/projects/ten-print" target="_self">Ten Print</a></li>
+	<li>&nbsp; &nbsp;<a href="/portfolio/projects/ten-print" target="_self">Ten Print</a></li>
 </ul>
 
 <p>&nbsp;</p>
