--- a/index.html
+++ b/index.html
@@ -1,35 +1,18 @@
-<h1 style="text-align:center">Alec&#39;s Portfolio</h1>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <title>Alec Portfolio</title>
+    <meta name="description" content="Alec's Portfolio">
+    <link rel="stylesheet" type="text/css" href="style.css">
+    <script src="script.js"></script>
+  </head>
+  <body>
+    <!-- Content -->
+	<div id="title"><h1> Alec's Portfolio</h1></div>
 
-<h2>Pages:</h2>
 
-<ul>
-	<li>&nbsp; &nbsp;<a href="/portfolio/projects/ten-print" target="_self">Ten Print</a></li>
-</ul>
 
-<p>&nbsp;</p>
 
-<p>&nbsp;</p>
-
-<p>&nbsp;</p>
-
-<p>&nbsp;</p>
-
-<p>&nbsp;</p>
-
-<p>&nbsp;</p>
-
-<p>&nbsp;</p>
-
-<p>&nbsp;</p>
-
-<p>&nbsp;</p>
-
-<p>&nbsp;</p>
-
-<p>&nbsp;</p>
-
-<p>&nbsp;</p>
-
-<p>&nbsp;</p>
-
-<p>This is a placeholder</p>
+  </body>
+</html>
