Added raleway font

--- a/index.html
+++ b/index.html
@@ -4,13 +4,17 @@
     <meta charset="utf-8">
     <title>Alec Portfolio</title>
     <meta name="description" content="Alec's Portfolio">
+	<!-- Style Sheet + Fonts-->>
     <link rel="stylesheet" type="text/css" href="style.css">
-    <script src="script.js"></script>
+	<link rel="preconnect" href="https://fonts.googleapis.com">	
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+	<script src="script.js"></script>
   </head>
   <body>
     <!-- Content -->
-	<div id="title"><h1> Alec's Portfolio</h1></div>
-
+	<h1> Alec's Portfolio</h1>
+	<div id="para"><p>Testing 123</p></div>
 
 
 
