--- a/index.html
+++ b/index.html
@@ -12,9 +12,22 @@
 	<script src="script.js"></script>
   </head>
   <body>
-    <!-- Content -->
+    <!-- NAV -->
+	<div class="topnav">
+		<a class="active" href="#home">Home</a>
+		<a href="#news">News</a>
+		<a href="#contact">Contact</a>
+		<a href="#about">About</a>
+	  </div> 
+	<hr>
+	<!-- TITLE -->>
 	<h1> Alec's Portfolio</h1>
-	<div id="para"><p>Testing 123</p></div>
+	<!-- CONTENT -->>
+	<div class="project"> 
+	<img src="https://letsenhance.io/static/8f5e523ee6b2479e26ecc91b9c25261e/1015f/MainAfter.jpg">
+	<h2>Project Name</h2>	
+	<p>Lorem ipsum dolor sit amet adipiscing bibendum sem orci tempus aliquet gravida, orci amet iaculis aptent blandit quam accumsan donec in facilisis, cursus ante curabitur aliquet condimentum tincidunt facilisis non cubilia lorem et pretium aliquam phasellus ipsum metus quisque auctor tristique donec nibh, praesent congue ultricies aenean ornare ligula sagittis proin sed vestibulum purus tempus aenean neque aliquam curae vivamus purus egestas ligula tincidunt nullam.</p>
+</div>
 
 
 
