--- a/index.html
+++ b/index.html
@@ -1,40 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <title>Alec Portfolio</title>
-    <meta name="description" content="Alec's Portfolio">
-	<!-- Style Sheet + Fonts-->>
-    <link rel="stylesheet" type="text/css" href="style.css">
-	<link rel="preconnect" href="https://fonts.googleapis.com">	
+
+<head>
+	<meta charset="utf-8">
+	<title>Alec Portfolio</title>
+	<meta name="description" content="Alec's Portfolio">
+	<!-- Style Sheet + Fonts-->
+	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap"
+		rel="stylesheet">
 	<script src="script.js"></script>
-  </head>
-  <body>
-    <!-- NAV -->
+</head>
+
+<body>
+	<!-- NAV -->
 	<div class="topnav">
 		<a class="active" href="#home">Home</a>
 		<a href="#news">News</a>
 		<a href="#contact">Contact</a>
 		<a href="#about">About</a>
-	  </div> 
+	</div>
 	<hr>
-	<!-- TITLE -->>
+
+	<!-- TITLE -->
 	<h1 id="pagetitle"> Alec's Portfolio</h1>
-	<!-- CONTENT -->>
-	<div class="project"> 
-		<img src="/images/tenprint.jpg">
-		<h2> <a href="/projects/ten-print/index.html">Ten Print</a></h2>	
-		<p>Lorem ipsum dolor sit amet adipiscing bibendum sem orci tempus aliquet gravida, orci amet iaculis aptent blandit quam accumsan donec in facilisis, cursus ante curabitur aliquet condimentum tincidunt facilisis non cubilia lorem et pretium aliquam phasellus ipsum metus quisque auctor tristique donec nibh, praesent congue ultricies aenean ornare ligula sagittis proin sed vestibulum purus tempus aenean neque aliquam curae vivamus purus egestas ligula tincidunt nullam.</p>
+	<!-- CONTENT -->
+	<div class="project">
+		<a href="/projects/ten-print/index.html"><img src="/images/tenprint.jpg"></a>
+		<h2> <a href="/projects/ten-print/index.html">Ten Print</a></h2>
+		<p>Lorem ipsum dolor sit amet adipiscing bibendum sem orci tempus aliquet gravida, orci amet iaculis aptent
+			blandit quam accumsan donec in facilisis, cursus ante curabitur aliquet condimentum tincidunt facilisis non
+			cubilia lorem et pretium aliquam phasellus ipsum metus quisque auctor tristique donec nibh, praesent congue
+			ultricies aenean ornare ligula sagittis proin sed vestibulum purus tempus aenean neque aliquam curae vivamus
+			purus egestas ligula tincidunt nullam.</p>
 	</div>
-	<div class="project"> 
+	<div class="project">
 		<img src="/images/blot.png">
-		<h2>Blot Project</h2>	
-		<p>Lorem ipsum dolor sit amet adipiscing bibendum sem orci tempus aliquet gravida, orci amet iaculis aptent blandit quam accumsan donec in facilisis, cursus ante curabitur aliquet condimentum tincidunt facilisis non cubilia lorem et pretium aliquam phasellus ipsum metus quisque auctor tristique donec nibh, praesent congue ultricies aenean ornare ligula sagittis proin sed vestibulum purus tempus aenean neque aliquam curae vivamus purus egestas ligula tincidunt nullam.</p>
+		<h2>Blot Project</h2>
+		<p>Lorem ipsum dolor sit amet adipiscing bibendum sem orci tempus aliquet gravida, orci amet iaculis aptent
+			blandit quam accumsan donec in facilisis, cursus ante curabitur aliquet condimentum tincidunt facilisis non
+			cubilia lorem et pretium aliquam phasellus ipsum metus quisque auctor tristique donec nibh, praesent congue
+			ultricies aenean ornare ligula sagittis proin sed vestibulum purus tempus aenean neque aliquam curae vivamus
+			purus egestas ligula tincidunt nullam.</p>
 	</div>
 
 
 
-  </body>
+</body>
+
 </html>
