Added Contact Page, Added Hover Effects, Adjusted Borders, Fixed Nav Bar

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
 	<meta charset="utf-8">
 	<title>Alec Portfolio</title>
+	<link rel="icon" type="image/x-icon" href="https://raw.githubusercontent.com/tailwindlabs/heroicons/ad0ad1f6d51bd64dcd67e363d2b2833a8de25154/optimized/24/solid/cube-transparent.svg">
 	<meta name="description" content="Alec's Portfolio">
 	<!-- Style Sheet + Fonts-->
 	<link rel="stylesheet" type="text/css" href="style.css">
@@ -17,9 +18,9 @@
 <body>
 	<!-- NAV -->
 	<div class="topnav">
-		<a class="active" href="#home">Home</a>
+		<a class="active" href="/index.html">Home</a>
 		<a href="#news">News</a>
-		<a href="#contact">Contact</a>
+		<a href="/contact.html">Contact</a>
 		<a href="#about">About</a>
 	</div>
 	<hr>
@@ -28,7 +29,7 @@
 	<h1 id="pagetitle"> Alec's Portfolio</h1>
 	<!-- CONTENT -->
 	<div class="project">
-		<a href="/projects/ten-print/index.html"><img src="/images/tenprint.jpg"></a>
+		<a href="/projects/ten-print/index.html"><img src="https://raw.githubusercontent.com/Sosenteam/portfolio/main/images/tenprint.jpg"></a>
 		<h2> <a href="/projects/ten-print/index.html">Ten Print</a></h2>
 		<p>Lorem ipsum dolor sit amet adipiscing bibendum sem orci tempus aliquet gravida, orci amet iaculis aptent
 			blandit quam accumsan donec in facilisis, cursus ante curabitur aliquet condimentum tincidunt facilisis non
@@ -37,7 +38,7 @@
 			purus egestas ligula tincidunt nullam.</p>
 	</div>
 	<div class="project">
-		<img src="/images/blot.png">
+		<img src="https://raw.githubusercontent.com/Sosenteam/portfolio/main/images/blot.png">
 		<h2>Blot Project</h2>
 		<p>Lorem ipsum dolor sit amet adipiscing bibendum sem orci tempus aliquet gravida, orci amet iaculis aptent
 			blandit quam accumsan donec in facilisis, cursus ante curabitur aliquet condimentum tincidunt facilisis non
