Update index.html to link to contact correctly

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 	<div class="topnav">
 		<a class="active" href="/index.html">Home</a>
 		<a href="#news">News</a>
-		<a href="/contact.html">Contact</a>
+		<a href="/portfolio/contact.html">Contact</a>
 		<a href="#about">About</a>
 	</div>
 	<hr>
