Add about page, fix nav bar

--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
 <body>
 	<!-- NAV -->
 	<div class="topnav">
-		<a class="active" href="/index.html">Home</a>
+		<a class="active" href="/portfolio/index.html">Home</a>
 		<a href="#news">News</a>
-		<a href="/contact.html">Contact</a>
-		<a href="#about">About</a>
+		<a href="/portfolio/contact.html">Contact</a>
+		<a href="/portfolio/about.html">About</a>
 	</div>
 	<hr>
 
@@ -38,7 +38,7 @@
 			purus egestas ligula tincidunt nullam.</p>
 	</div>
 	<div class="project">
-		<img src="https://raw.githubusercontent.com/Sosenteam/portfolio/main/images/blot.png">
+		<img src="/images/blotBanner.png">
 		<h2>Blot Project</h2>
 		<p>Lorem ipsum dolor sit amet adipiscing bibendum sem orci tempus aliquet gravida, orci amet iaculis aptent
 			blandit quam accumsan donec in facilisis, cursus ante curabitur aliquet condimentum tincidunt facilisis non
