Fix image link for github

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 			purus egestas ligula tincidunt nullam.</p>
 	</div>
 	<div class="project">
-		<img src="/images/blotBanner.png">
+		<img src="https://github.com/Sosenteam/portfolio/blob/main/images/blotBanner.png?raw=true">
 		<h2>Blot Project</h2>
 		<p>Lorem ipsum dolor sit amet adipiscing bibendum sem orci tempus aliquet gravida, orci amet iaculis aptent
 			blandit quam accumsan donec in facilisis, cursus ante curabitur aliquet condimentum tincidunt facilisis non
