Fixed Rainbow Border, Added P5jsBoss, Fixed Lots

--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
 	<meta charset="utf-8">
 	<title>Alec Portfolio</title>
-	<link rel="icon" type="image/x-icon" href="https://raw.githubusercontent.com/tailwindlabs/heroicons/ad0ad1f6d51bd64dcd67e363d2b2833a8de25154/optimized/24/solid/cube-transparent.svg">
+	<link rel="icon" type="image/x-icon"
+		href="https://raw.githubusercontent.com/tailwindlabs/heroicons/ad0ad1f6d51bd64dcd67e363d2b2833a8de25154/optimized/24/solid/cube-transparent.svg">
 	<meta name="description" content="Alec's Portfolio">
 	<!-- Style Sheet + Fonts-->
 	<link rel="stylesheet" type="text/css" href="style.css">
@@ -29,24 +30,25 @@
 	<h1 id="pagetitle"> Alec's Portfolio</h1>
 	<!-- CONTENT -->
 	<div class="project">
-		<a href="/projects/ten-print/index.html"><img src="https://raw.githubusercontent.com/Sosenteam/portfolio/main/images/tenprint.jpg"></a>
-		<h2> <a href="/projects/ten-print/index.html">Ten Print</a></h2>
-		<p>Lorem ipsum dolor sit amet adipiscing bibendum sem orci tempus aliquet gravida, orci amet iaculis aptent
-			blandit quam accumsan donec in facilisis, cursus ante curabitur aliquet condimentum tincidunt facilisis non
-			cubilia lorem et pretium aliquam phasellus ipsum metus quisque auctor tristique donec nibh, praesent congue
-			ultricies aenean ornare ligula sagittis proin sed vestibulum purus tempus aenean neque aliquam curae vivamus
-			purus egestas ligula tincidunt nullam.</p>
+		<a href="/projects/ten-print/index.html"></a>
+		<img src="https://raw.githubusercontent.com/Sosenteam/portfolio/main/images/tenprint.jpg">
+		<h2>Ten Print</h2>
+		<p>Ten Print was one of my p5js projects, it was orignally a one-line Commodore 64 BASIC program and I turned it
+			into a simple art peice that lets you change the base idea to make more creative ideas.</p>
 	</div>
 	<div class="project">
+		<a href="https://github.com/Sosenteam/unionblot"></a>
 		<img src="https://github.com/Sosenteam/portfolio/blob/main/images/blotBanner.png?raw=true">
 		<h2>Blot Project</h2>
-		<p>Lorem ipsum dolor sit amet adipiscing bibendum sem orci tempus aliquet gravida, orci amet iaculis aptent
-			blandit quam accumsan donec in facilisis, cursus ante curabitur aliquet condimentum tincidunt facilisis non
-			cubilia lorem et pretium aliquam phasellus ipsum metus quisque auctor tristique donec nibh, praesent congue
-			ultricies aenean ornare ligula sagittis proin sed vestibulum purus tempus aenean neque aliquam curae vivamus
-			purus egestas ligula tincidunt nullam.</p>
+		<p>Blot is a project by Hackclub, where if you make an interesting peice of generative art they will send you a
+			free CNC style pen plotter for you to draw your artwork with. </p>
 	</div>
-
+	<div class="project">
+		<a href="/projects/p5boss/"></a>
+		<img src="https://github.com/Sosenteam/portfolio/blob/main/images/p5jsboss.png?raw=true">
+		<h2>p5js Boss</h2>
+		<p>This was my final project for my p5js-based class, its a top down horde game/bullet hell. It has a blocky style and was a pretty fun project to work on!</p>
+	</div>
 
 
 </body>
