Added sprig project, added about.css, added spin animaton to about pfp, fixed gradient on projects kinda

--- a/about.html
+++ b/about.html
@@ -9,6 +9,7 @@
     <meta name="description" content="Alec's Portfolio">
     <!-- Style Sheet + Fonts-->
     <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="about.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&display=swap"
@@ -37,12 +38,7 @@
             <li>Selfhosting <s>Enthusiast</s> Nerd</li>
             <li>General Purpose All-in-one Nerd</li>
         </ul></h3></div>  
-        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
-            industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and
-            scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into
-            electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of
-            Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like
-            Aldus PageMaker including versions of Lorem Ipsum.</p>
+        <p>I am a person who likes to make projects and also make other projects and occasionally make more projects!</p>
     </div>
 
 
