--- a/index.html
+++ b/index.html
@@ -30,6 +30,13 @@
 	<h1 id="pagetitle"> Alec's Portfolio</h1>
 	<!-- CONTENT -->
 	<div class="project">
+		<a href="https://github.com/Sosenteam/sprig-rythym/"></a>
+		<img src="https://github.com/Sosenteam/portfolio/blob/main/images/sprig-rythym.png?raw=true">
+		<h2>Sprig Rythym Mania</h2>
+		<p>This was a project I did based on <a href="https://sprig.hackclub.com">Hackclub's Sprig project</a>, in which if you make a game, you can get a free pi pico based
+		game console! I made a little rythym game similar to DDR or other similar games.</p>
+	</div>
+	<div class="project">
 		<a href="/projects/ten-print/index.html"></a>
 		<img src="https://raw.githubusercontent.com/Sosenteam/portfolio/main/images/tenprint.jpg">
 		<h2>Ten Print</h2>
