fixed nav bar for new repository name

--- a/about.html
+++ b/about.html
@@ -20,10 +20,10 @@
 <body>
     <!-- NAV -->
     <div class="topnav">
-        <a href="/portfolio/index.html">Home</a>
+        <a href="/index.html">Home</a>
         <a href="#news">News</a>
-        <a href="/portfolio/contact.html">Contact</a>
-        <a class="active" href="/porfolio/about.html">About</a>
+        <a href="/contact.html">Contact</a>
+        <a class="active" href="/about.html">About</a>
     </div>
     <hr>
 
