--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
 <body>
 	<!-- NAV -->
 	<div class="topnav">
-		<a class="active" href="/portfolio/index.html">Home</a>
+		<a class="active" href="/index.html">Home</a>
 		<a href="#news">News</a>
-		<a href="/portfolio/contact.html">Contact</a>
-		<a href="/portfolio/about.html">About</a>
+		<a href="/contact.html">Contact</a>
+		<a href="/about.html">About</a>
 	</div>
 	<hr>
 
