--- a/contact.html
+++ b/contact.html
@@ -18,10 +18,10 @@
 <body>
 	<!-- NAV -->
 	<div class="topnav">
-		<a href="/portfolio/index.html">Home</a>
+		<a href="/index.html">Home</a>
 		<a href="#news">News</a>
 		<a class="active" href="#contact">Contact</a>
-		<a href="/portfolio/about.html">About</a>
+		<a href="/about.html">About</a>
 	</div>
 	<hr>
 
