add project page, moved projects, tried to add project horizontal scroll to main page (NEEDS JS)

--- a/about.html
+++ b/about.html
@@ -21,7 +21,7 @@
     <!-- NAV -->
     <div class="topnav">
         <a href="/index.html">Home</a>
-        <a href="#news">News</a>
+        <a href="/projects.html">Projects</a>
         <a href="/contact.html">Contact</a>
         <a class="active" href="/about.html">About</a>
     </div>
