--- a/contact.html
+++ b/contact.html
@@ -19,7 +19,7 @@
 	<!-- NAV -->
 	<div class="topnav">
 		<a href="/index.html">Home</a>
-		<a href="#news">News</a>
+		<a href="/projects.html">Projects</a>
 		<a class="active" href="#contact">Contact</a>
 		<a href="/about.html">About</a>
 	</div>
