--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 	<!-- NAV -->
 	<div class="topnav">
 		<a class="active" href="/index.html">Home</a>
-		<a href="#news">News</a>
+		<a href="/projects.html">Projects</a>
 		<a href="/contact.html">Contact</a>
 		<a href="/about.html">About</a>
 	</div>
@@ -28,34 +28,23 @@
 
 	<!-- TITLE -->
 	<h1 id="pagetitle"> Alec's Portfolio</h1>
-	<!-- CONTENT -->
-	<div class="project">
-		<a href="https://github.com/Sosenteam/sprig-rythym/"></a>
-		<img src="https://github.com/Sosenteam/portfolio/blob/main/images/sprig-rythym.png?raw=true">
-		<h2>Sprig Rythym Mania</h2>
-		<p>This was a project I did based on <a href="https://sprig.hackclub.com">Hackclub's Sprig project</a>, in which if you make a game, you can get a free pi pico based
-		game console! I made a little rythym game similar to DDR or other similar games.</p>
-	</div>
-	<div class="project">
-		<a href="/projects/ten-print/index.html"></a>
-		<img src="https://raw.githubusercontent.com/Sosenteam/portfolio/main/images/tenprint.jpg">
-		<h2>Ten Print</h2>
-		<p>Ten Print was one of my p5js projects, it was orignally a one-line Commodore 64 BASIC program and I turned it
-			into a simple art peice that lets you change the base idea to make more creative ideas.</p>
-	</div>
-	<div class="project">
-		<a href="https://github.com/Sosenteam/unionblot"></a>
-		<img src="https://github.com/Sosenteam/portfolio/blob/main/images/blotBanner.png?raw=true">
-		<h2>Blot Project</h2>
-		<p>Blot is a project by Hackclub, where if you make an interesting peice of generative art they will send you a
-			free CNC style pen plotter for you to draw your artwork with. </p>
-	</div>
-	<div class="project">
-		<a href="/projects/p5boss/index.html"></a>
-		<img src="https://github.com/Sosenteam/portfolio/blob/main/images/p5jsboss.png?raw=true">
-		<h2>p5js Boss</h2>
-		<p>This was my final project for my p5js-based class, its a top down horde game/bullet hell. It has a blocky style and was a pretty fun project to work on!</p>
-	</div>
+
+
+	<div id="indexCard">
+		<!-- LOOK AT MY PROJECTS HERE: ALSO ADD JS SO IT SMOOTH AND PERFECT AND NICE -->
+		 <h2>Projects</h2>
+		<div class="scrollContainer">
+			<img src="https://github.com/Sosenteam/portfolio/blob/main/images/sprig-rythym.png?raw=true">
+			<img src="https://raw.githubusercontent.com/Sosenteam/portfolio/main/images/tenprint.jpg">
+			<img src="https://github.com/Sosenteam/portfolio/blob/main/images/blotBanner.png?raw=true">
+			<img src="https://github.com/Sosenteam/portfolio/blob/main/images/p5jsboss.png?raw=true">
+			<img src="https://github.com/Sosenteam/portfolio/blob/main/images/sprig-rythym.png?raw=true">
+			<img src="https://raw.githubusercontent.com/Sosenteam/portfolio/main/images/tenprint.jpg">
+
+		</div>
+
+	</div>	
+	
 
 
 </body>
