Added/Learned JS functionallity, worked on counter and a scroller system

--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
 
 	<div id="indexCard">
 		<!-- LOOK AT MY PROJECTS HERE: ALSO ADD JS SO IT SMOOTH AND PERFECT AND NICE -->
-		 <h2>Projects</h2>
-		<div class="scrollContainer">
+		<h2>Projects</h2>
+		<div class="scrollContainer" onmouseover="spinContainer()">
 			<img src="https://github.com/Sosenteam/portfolio/blob/main/images/sprig-rythym.png?raw=true">
 			<img src="https://raw.githubusercontent.com/Sosenteam/portfolio/main/images/tenprint.jpg">
 			<img src="https://github.com/Sosenteam/portfolio/blob/main/images/blotBanner.png?raw=true">
@@ -43,7 +43,9 @@
 
 		</div>
 
-	</div>	
+	</div>
+	
+	<h1 id="counter">1</h1>
 	
 
 
