Fixed Index's project section, Added links and fixed contact section, made project section work as links w/ ids

--- a/index.html
+++ b/index.html
@@ -33,20 +33,43 @@
 	<div id="indexCard">
 		<!-- LOOK AT MY PROJECTS HERE: ALSO ADD JS SO IT SMOOTH AND PERFECT AND NICE -->
 		<h2>Projects</h2>
-		<div class="scrollContainer" onmouseover="spinContainer()">
-			<img src="https://github.com/Sosenteam/portfolio/blob/main/images/sprig-rythym.png?raw=true">
-			<img src="https://raw.githubusercontent.com/Sosenteam/portfolio/main/images/tenprint.jpg">
-			<img src="https://github.com/Sosenteam/portfolio/blob/main/images/blotBanner.png?raw=true">
-			<img src="https://github.com/Sosenteam/portfolio/blob/main/images/p5jsboss.png?raw=true">
-			<img src="https://github.com/Sosenteam/portfolio/blob/main/images/sprig-rythym.png?raw=true">
-			<img src="https://raw.githubusercontent.com/Sosenteam/portfolio/main/images/tenprint.jpg">
-
+		<div id="projCardHolder">
+			<div class="projCard">
+				<a href="/projects.html#sprig">
+					<h3>Rythym Mania</h3>
+					<img src="https://github.com/Sosenteam/portfolio/blob/main/images/sprig-rythym.png?raw=true">
+					<h5>Sprig Rhythm Game</h5>
+				</a>
+			</div>
+			<div class="projCard">
+				<a href="/projects.html#ten-print">
+					<h3>Ten Print</h3>
+					<img src="https://raw.githubusercontent.com/Sosenteam/portfolio/main/images/tenprint.jpg">
+					<h5> /\/\ Generative Art \/\/ <h5>
+				</a>
+			</div>
+			<div class="projCard">
+				<a href="/projects.html#blot">
+					<h3>Blot</h3>
+					<img src="https://github.com/Sosenteam/portfolio/blob/main/images/blotBanner.png?raw=true">
+					<h5>Drawing Robot</h5>
+				</a>
+			</div>
+			<div class="projCard">
+				<a href="/projects.html#p5boss">
+					<h3>P5 Boss</h3>
+					<img src="https://github.com/Sosenteam/portfolio/blob/main/images/p5jsboss.png?raw=true">
+					<h5>p5js Boss Fight</h5>
+				</a>
+			</div>
+			
+			
 		</div>
+	</div>
+	<div>
 
 	</div>
-	
-	<h1 id="counter">1</h1>
-	
+
 
 
 </body>
