--- a/projects.html
+++ b/projects.html
@@ -38,7 +38,7 @@
     <hr>
 
     <!-- CONTENT -->
-    <div class="project">
+    <div class="project" id="sprig">
         <a href="https://github.com/Sosenteam/sprig-rythym/"></a>
         <img src="https://github.com/Sosenteam/portfolio/blob/main/images/sprig-rythym.png?raw=true">
         <h2>Sprig Rythym Mania</h2>
@@ -46,21 +46,21 @@
             if you make a game, you can get a free pi pico based
             game console! I made a little rythym game similar to DDR or other similar games.</p>
     </div>
-    <div class="project">
+    <div class="project" id="ten-print">
         <a href="/projects/ten-print/index.html"></a>
         <img src="https://raw.githubusercontent.com/Sosenteam/portfolio/main/images/tenprint.jpg">
         <h2>Ten Print</h2>
         <p>Ten Print was one of my p5js projects, it was orignally a one-line Commodore 64 BASIC program and I turned it
             into a simple art peice that lets you change the base idea to make more creative ideas.</p>
     </div>
-    <div class="project">
+    <div class="project" id="blot">
         <a href="https://github.com/Sosenteam/unionblot"></a>
         <img src="https://github.com/Sosenteam/portfolio/blob/main/images/blotBanner.png?raw=true">
         <h2>Blot Project</h2>
         <p>Blot is a project by Hackclub, where if you make an interesting peice of generative art they will send you a
             free CNC style pen plotter for you to draw your artwork with. </p>
     </div>
-    <div class="project">
+    <div class="project" id="p5boss">
         <a href="/projects/p5boss/index.html"></a>
         <img src="https://github.com/Sosenteam/portfolio/blob/main/images/p5jsboss.png?raw=true">
         <h2>p5js Boss</h2>
